finished code with bugs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	
+	<div id="game">
+		<h1 style="text-align: center">The Psychic Game</h1>
+		<p style="text-align: center">Guess What Letter I'm is Thinking Of</p>
+	</div>
+
 <script src="assets/javascript/game.js">
 	
 </script>
