finished code, js won't link

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 	
 	<div id="game">
-		<h1 style="text-align: center">The Psychic Game</h1>
-		<p style="text-align: center">Guess What Letter I'm is Thinking Of</p>
+		<h1>The Psychic Game</h1>
+		<h5>Guess What Letter I'm Thinking Of</h5>
 	</div>
 
-<script src="assets/javascript/game.js">
+<script type= "text/javascript" src="assets/javascript/game.js">
 	
 </script>
 	
