--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 	
 	<div id="game">
-		<h1>The Psychic Game</h1>
-		<h5>Guess What Letter I'm Thinking Of</h5>
+		<h1> Select Any Letter to Begin </h1>
 	</div>
 
 <script type= "text/javascript" src="assets/javascript/game.js">
